--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,25 @@ on:
 
 jobs:
 
-  build:
+  test:
     name: Test
     runs-on: ubuntu-latest
-    steps:
+    services:
+      postgres:
+        # Docker Hub Image
+        image: postgres:12-alpine
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
+    steps:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
@@ -21,6 +35,9 @@ jobs:
     
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+
+    - name: Run migration
+      run: make migrateup
 
     - name: Test
       run: make test
