--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,19 +7,20 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   test:
     name: Test
     runs-on: ubuntu-latest
     services:
       postgres:
         # Docker Hub Image
-        image: postgres:12-alpine
+        image: postgres:12
         # Provide the password for postgres
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: secret
           POSTGRES_DB: simple_bank
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -35,6 +36,12 @@ jobs:
     
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+    
+    - name: Install golang-migrate
+      run: |
+        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-amd64.tar.gz | tar xvz
+        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        which migrate
 
     - name: Run migration
       run: make migrateup
